--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClaseAbout"></activity>
+        <activity android:name=".ClaseAbout" />
+        <activity android:name=".ClaseChat"></activity>
     </application>
 
 </manifest>
